<?xml version="1.0"?>
<package>
  <name>gazebo_kinova_interface</name>
  <version>0.0.1</version>
  <description>gazebo_kinova_interface</description>
  <author email="soraxas@tinyiu.com">Tin Lai</author>
  <maintainer email="soraxas@tinyiu.com">Tin Lai</maintainer>

  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kinova_gazebo</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>kinova_driver</run_depend>
  <run_depend>kinova_gazebo</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>kinova_control</run_depend>
  <run_depend>kinova_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>

